...
                            date: "2023-10-02",
                            local: "Location 3",
                            description: "Description 3",
                        },
                    ],
                    status: 200,
                    statusText: "OK",
                    headers: {},
                    config,
                });
        }

        // Simula GET /events/:id
...
