...
              {
                opacity,
                transform: [{ translateY }],
              },
            ]}
          >
            <Text style={styles.title}>Login</Text>

            <GenericForm title="" fields={fieldsWithFocusHandlers} />

            {error && (
              <Text
                style={{
...
